--- a/Airflow/kpris/test/test.ipynb
+++ b/Airflow/kpris/test/test.ipynb
@@ -580,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov  4 2022, 20:59:55) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
